# nitpick

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: push.yml
src/dycw_nitpick/: __init__.py
src/tests/: test_main.py
styles/: 3.10.toml  3.11.toml  3.12.toml  3.13.toml  3.14.toml  common.toml  pip-compile-generate-hashes.toml  pip-compile-no-hashes.toml  pyright.toml
