#

# build-system
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# dependency groups
[dependency-groups]
dev = [
  "dycw-utilities[test]",
  "pyright[nodejs]",
  "rich",
]

# project
[project]
authors = [{name = "Derek Wan", email = "d.wan@icloud.com"}]
dependencies = []
name = "dycw-nitpick"
readme = "README.md"
requires-python = ">= 3.14"
version = "0.4.4"

# bump-my-version
[tool.bumpversion]
allow_dirty = true
current_version = "0.4.4"

[[tool.bumpversion.files]]
filename = "src/dycw_nitpick/__init__.py"
replace = "__version__ = \"{new_version}\""
search = "__version__ = \"{current_version}\""

# hatch
[tool.hatch]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dycw_nitpick"]
