# build-system
[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

# dependency groups
[dependency-groups]
  dev = ["dycw-utilities[test]", "pyright[nodejs]", "rich"]

# project
[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = []
  name = "dycw-nitpick"
  readme = "README.md"
  requires-python = ">= 3.14"
  version = "0.4.10"

# tool
[tool]

  # bump-my-version
  [tool.bumpversion]
    allow_dirty = true
    current_version = "0.4.10"

    [[tool.bumpversion.files]]
      filename = "src/dycw_nitpick/__init__.py"
      replace = "__version__ = \"{new_version}\""
      search = "__version__ = \"{current_version}\""
